--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,20 +1,16 @@
 ---
-interface Props {
-	title: string;
-}
 
-const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" style="zoom: 130%;">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="./repeating-timers/catCri2.jpg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<title>Timers</title>
 	</head>
 	<body>
 		<slot />
