--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="./repeating-timers/catCri2.jpg" />
+		<link rel="icon" type="image/svg+xml" href="/repeating-timers/catCri2.jpg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Timers</title>
 	</head>
