--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -174,7 +174,7 @@
 			}
 		</script>
 		<meta name="generator" content={Astro.generator} />
-		<title>Timers</title>
+		<title>App</title>
 	</head>
 	<body>
 		<slot />
