--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -194,7 +194,7 @@
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background-color: #41454d;
+		background-color: #2b2c34;
 		background-size: 224px;
 	}
 	body {
